[VL-4] Add JpaFilmRepositoryTest