@@ -4,14 +4,15 @@ import it.proconsole.library.video.adapter.jpa.model.GenreEntity;
 import it.proconsole.library.video.core.model.Genre;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class GenreAdapter {
   public List<GenreEntity> fromDomain(List<Genre> genres) {
-    return genres.stream().map(this::fromDomain).toList();
+    return genres.stream().map(this::fromDomain).collect(Collectors.toList());
   }
 
   public List<Genre> toDomain(List<GenreEntity> genres) {
-    return genres.stream().map(this::toDomain).toList();
+    return genres.stream().map(this::toDomain).collect(Collectors.toList());
   }
 
   private GenreEntity fromDomain(Genre genre) {
